--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -101,6 +101,10 @@
             background-color: #d1e7dd;
             color: #0f5132;
         }
+        .role-cliente {
+            background-color: #fff3cd;
+            color: #664d03;
+        }
         .hidden {
             display: none;
         }
@@ -154,25 +158,32 @@
                 <div id="dashboardSection">
                     <h2 class="section-title">Dashboard</h2>
                     <div class="row">
-                        <div class="col-md-4">
-                            <div class="card stats-card">
+                        <div class="col-md-3">
+                            <div class="card stats-card" id="productsStatsCard" style="cursor: pointer;">
                                 <i class="bi bi-box-seam"></i>
                                 <h3 id="totalProducts">0</h3>
                                 <p>Total Products</p>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="card stats-card admin">
+                        <div class="col-md-3">
+                            <div class="card stats-card admin" id="adminsStatsCard" style="cursor: pointer;">
                                 <i class="bi bi-person-badge"></i>
                                 <h3 id="totalAdmins">0</h3>
                                 <p>Admin Users</p>
                             </div>
                         </div>
-                        <div class="col-md-4">
-                            <div class="card stats-card employee">
+                        <div class="col-md-3">
+                            <div class="card stats-card employee" id="employeesStatsCard" style="cursor: pointer;">
                                 <i class="bi bi-person"></i>
                                 <h3 id="totalEmployees">0</h3>
                                 <p>Employee Users</p>
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="card stats-card cliente" id="clientesStatsCard" style="cursor: pointer;">
+                                <i class="bi bi-person-heart"></i>
+                                <h3 id="totalClientes">0</h3>
+                                <p>Client Users</p>
                             </div>
                         </div>
                     </div>
@@ -216,6 +227,7 @@
                                             <option value="">Select Role</option>
                                             <option value="admin">Admin</option>
                                             <option value="employee">Employee</option>
+                                            <option value="cliente">Cliente</option>
                                         </select>
                                     </div>
                                 </div>
@@ -232,9 +244,14 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h3 class="card-title mb-0">Users List</h3>
-                                <button id="refreshUsers" class="btn btn-sm btn-outline-primary">
-                                    <i class="bi bi-arrow-clockwise"></i> Refresh
-                                </button>
+                                <div class="d-flex gap-2 align-items-center">
+                                    <div class="search-container">
+                                        <input type="text" id="userSearch" class="form-control" placeholder="Search users...">
+                                    </div>
+                                    <button id="refreshUsers" class="btn btn-sm btn-outline-primary">
+                                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                                    </button>
+                                </div>
                             </div>
                             <div id="usersList" class="mt-3">
                                 <!-- Users will be loaded here -->
