--- a/public/index.html
+++ b/public/index.html
@@ -69,13 +69,15 @@
             </form>
         </div>
         
-        <!-- Products List -->
+        <!-- Products List with Search -->
         <div class="row">
-            <div class="col-12 mb-4">
-                <h2>Products List</h2>
-                <button id="refreshProducts" class="btn btn-outline-primary mb-3">
+            <div class="col-12 mb-4 d-flex justify-content-between align-items-center">
+                <button id="refreshProducts" class="btn btn-outline-primary">
                     <i class="bi bi-arrow-clockwise"></i> Refresh List
                 </button>
+                <div class="col-md-4">
+                    <input type="text" id="productSearch" class="form-control" placeholder="Search products...">
+                </div>
             </div>
             <div id="productsList" class="row"></div>
         </div>
