--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -175,6 +175,13 @@
                                 <p>Employee Users</p>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="card stats-card client">
+                                <i class="bi bi-person-circle"></i>
+                                <h3 id="totalClients">0</h3>
+                                <p>Client Users</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -216,6 +223,7 @@
                                             <option value="">Select Role</option>
                                             <option value="admin">Admin</option>
                                             <option value="employee">Employee</option>
+                                            <option value="client">Client</option>
                                         </select>
                                     </div>
                                 </div>
@@ -232,12 +240,29 @@
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-center mb-3">
                                 <h3 class="card-title mb-0">Users List</h3>
-                                <button id="refreshUsers" class="btn btn-sm btn-outline-primary">
-                                    <i class="bi bi-arrow-clockwise"></i> Refresh
-                                </button>
+                                <div class="d-flex gap-2">
+                                    <div class="input-group">
+                                        <input type="text" id="userSearch" class="form-control" placeholder="Search users...">
+                                        <select id="userFilter" class="form-select" style="max-width: 150px;">
+                                            <option value="">All Roles</option>
+                                            <option value="admin">Admin</option>
+                                            <option value="employee">Employee</option>
+                                            <option value="client">Client</option>
+                                        </select>
+                                    </div>
+                                    <button id="refreshUsers" class="btn btn-sm btn-outline-primary">
+                                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                                    </button>
+                                </div>
                             </div>
                             <div id="usersList" class="mt-3">
                                 <!-- Users will be loaded here -->
+                            </div>
+                            <div class="d-flex justify-content-between align-items-center mt-3">
+                                <div class="text-muted" id="usersCount">Showing 0 users</div>
+                                <nav aria-label="Users pagination">
+                                    <ul class="pagination mb-0" id="usersPagination"></ul>
+                                </nav>
                             </div>
                         </div>
                     </div>
@@ -268,6 +293,24 @@
         </div>
     </template>
 
+    <!-- Delete User Modal -->
+    <div class="modal fade" id="deleteUserModal" tabindex="-1" aria-labelledby="deleteUserModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="deleteUserModalLabel">Confirm Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure you want to delete this user? This action cannot be undone.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="confirmDeleteUser">Delete User</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/dashboard.js"></script>
 </body>
